log
Thu 09 Mar 2023 04:10:11 PM UTC: 
 tests:  0|7
total_score: 0/70
10dfc22
Thu 09 Mar 2023 04:14:20 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
85b93d5
Sat 11 Mar 2023 11:47:42 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if(*a[k] < *min)
      |            ^~~~~
exercises.c:33:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |           *min = *a[k];
      |                  ^~~~~
exercises.c:35:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |         if(*a[k] > *max)
      |            ^~~~~
exercises.c:37:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   37 |           *max = *a[k];
      |                  ^~~~~
Compilation failed
f27b0fc
Sat 11 Mar 2023 11:47:54 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |         if(*a[k] > *max)
      |            ^~~~~
Compilation failed
e1c7f04
Sat 11 Mar 2023 11:48:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e8a28eb
Sat 11 Mar 2023 11:50:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
673926d
Sat 11 Mar 2023 11:52:50 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
459f42c
Sat 11 Mar 2023 11:56:35 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:62:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   62 |   p.edad = edad
      |    ^
      |    ->
exercises.c:62:16: error: expected ‘;’ before ‘return’
   62 |   p.edad = edad
      |                ^
      |                ;
   63 | 
   64 |    return p;
      |    ~~~~~~       
exercises.c:60:14: error: variable ‘p’ set but not used [-Werror=unused-but-set-variable]
   60 |    Persona * p = (Persona *) malloc(sizeof(Persona));
      |              ^
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
   65 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0a62a23
Sat 11 Mar 2023 11:57:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7316166
